--- a/views/business/outgoing-list.html
+++ b/views/business/outgoing-list.html
@@ -16,15 +16,14 @@
     <div class="layui-row layui-col-space15">
         <div class="layui-col-md12">
             <div class="layui-card">
-                <div class="layui-card-header">采购单列表</div>
+                <div class="layui-card-header">半成品外发列表</div>
                 <div class="layui-card-body">
                     <div class="layui-btn-group" style="margin-bottom: 10px;">
                         <button class="layui-btn" data-type="add">新增</button>
                         <button class="layui-btn" data-type="edit">编辑</button>
                         <button class="layui-btn" data-type="del">删除</button>
                         <button class="layui-btn" data-type="detail">查看</button>
-                        <button class="layui-btn" data-type="purchase">采购</button>
-                        <button class="layui-btn" data-type="inbound">提交入库</button>
+                        <button class="layui-btn" data-type="outgoing">外发</button>
                     </div>
                     <div class="demoTable" style="margin-bottom: 10px;">
                         物品名称：
@@ -33,7 +32,7 @@
                         </div>
                         采购单编号：
                         <div class="layui-inline">
-                            <input class="layui-input" name="purchaseCode" id="purchaseCode" autocomplete="off">
+                            <input class="layui-input" name="sampleCode" id="sampleCode" autocomplete="off">
                         </div>
                         订单编号：
                         <div class="layui-inline">
@@ -47,13 +46,7 @@
                         {{#  if(d.status === 0){ }}
                         <span style="color: #F581B1;">草稿</span>
                         {{#  } else if(d.status === 1) { }}
-                        <span style="color: #F581B1;">采购中</span>
-                        {{#  } else if(d.status === 2) { }}
-                        <span style="color: #F581B1;">待入库</span>
-                        {{#  } else if(d.status === 3) { }}
-                        <span style="color: #F581B1;">已入库</span>
-                        {{#  } else if(d.status === 4) { }}
-                        <span style="color: #F581B1;">驳回</span>
+                        <span style="color: #F581B1;">完成</span>
                         {{#  } }}
                     </script>
 
@@ -81,21 +74,18 @@
         //方法级渲染
         table.render({
             elem: '#order-table'
-            , url: domain + 'api/purchaseOrder/findPurchaseOrderPage?t=' + new Date().getTime()
+            , url: domain + 'api/orderOutgoing/findOrderOutgoingPage?t=' + new Date().getTime()
             , cols: [[
                 {checkbox: true}
-                , {field: 'purchaseCode', title: '采购单编号', width: 220, sort: true}
+                , {field: 'sampleCode', title: '款号', width: 220, sort: true}
                 , {field: 'orderCode', title: '订单款号', width: 180, sort: true}
-                , {field: 'productName', title: '原材料名称', width: 150}
-                , {field: 'ingredients', title: '成份', width: 150}
-                , {field: 'color', title: '颜色', width: 80, sort: true}
-                , {field: 'batchNo', title: '批次', width: 115}
-                , {field: 'weight', title: '重量', width: 120, sort: true}
-                , {field: 'num', title: '件(箱)数', width: 100}
-                , {field: 'company', title: '货源公司', width: 200}
-                , {field: 'createTime', title: '制单日期', width: 180}
-                , {field: 'user', title: '制单人', width: 110}
-                , {field: 'warehouser', title: '入库负责人', width: 120}
+                , {field: 'productName', title: '产品名称', width: 150}
+                , {field: 'specification', title: '规格', width: 150}
+                , {field: 'num', title: '数量', width: 100}
+                , {field: 'outgoingTime', title: '外发日期', width: 80, sort: true}
+                , {field: 'deptName', title: '生产部门', width: 115}
+                , {field: 'user', title: '经办人', width: 120, sort: true}
+                , {field: 'company', title: '外发单位', width: 200}
                 , {field: 'status', title: '状态', width: 80, templet: '#statusTpl', unresize: true}
                 , {field: 'remarks', title: '备注', width: 300}
             ]]
@@ -110,8 +100,8 @@
             add: function () {
                 var index = layer.open({
                     type: 2,
-                    title: "新增采购单",
-                    content: 'purchase-order-add.html',
+                    title: "新增外发半成品",
+                    content: 'outgoing-add.html',
                     area: ['300px', '300px'],
                     maxmin: true
                 });
@@ -134,8 +124,8 @@
                 }
                 var index = layer.open({
                     type: 2,
-                    title: "修改采购单",
-                    content: 'purchase-order-edit.html?id=' + ids[0],
+                    title: "修改外发半成品",
+                    content: 'outgoing-edit.html?id=' + ids[0],
                     area: ['300px', '300px'],
                     maxmin: true
                 });
@@ -152,11 +142,11 @@
                     layer.alert("请先选择！");
                     return false;
                 }
-                layer.confirm('确定批量删除采购单？', function (index) {
+                layer.confirm('确定批量删除外发半成品？', function (index) {
                     $.ajax({
                         type: 'POST',
                         contentType: "application/x-www-form-urlencoded;charset=utf-8;",
-                        url: domain + "api/purchaseOrder/deleteBatch",
+                        url: domain + "api/orderOutgoing/deleteBatch",
                         data: {
                             "ids": ids
                         },
@@ -184,7 +174,7 @@
                 });
                 layer.full(index);
             },
-            purchase: function () {
+            outgoing: function () {
                 var checkStatus = table.checkStatus('orderTable')
                     , data = checkStatus.data;
                 var ids = [];
@@ -199,53 +189,15 @@
                     layer.alert("只可以选择一条记录！");
                     return false;
                 }
-                if(data[0].status != 0 && data[0].status != 4){
+                if(data[0].status != 0){
                     layer.alert("该条记录不可操作！");
                     return false;
                 }
-                layer.confirm('采购单进入采购中？', function (index) {
+                layer.confirm('该条半成品外发？', function (index) {
                     $.ajax({
                         type: 'PUT',
                         contentType: "application/json;",
-                        url: domain + "api/purchaseOrder/updateToPurchase/" + data[0].id,
-                        success: function (result) {
-                            if (result.code == 0) {
-                                table.reload('orderTable');
-                                layer.close(index);
-                            } else {
-                                layer.alert(result.msg);
-                            }
-                        },
-                        error: function () {
-                            console.log("网络错误！");
-                        }
-                    });
-                });
-            },
-            inbound: function () {
-                var checkStatus = table.checkStatus('orderTable')
-                    , data = checkStatus.data;
-                var ids = [];
-                for (var i = 0; i < data.length; i++) {
-                    ids.push(data[i].id);
-                }
-                if (ids.length <= 0) {
-                    layer.alert("请先选择！");
-                    return false;
-                }
-                if (ids.length > 1) {
-                    layer.alert("只可以选择一条记录！");
-                    return false;
-                }
-                if(data[0].status != 1){
-                    layer.alert("该条记录不可操作！");
-                    return false;
-                }
-                layer.confirm('采购单入库？', function (index) {
-                    $.ajax({
-                        type: 'PUT',
-                        contentType: "application/json;",
-                        url: domain + "api/purchaseOrder/updateToInbound/" + data[0].id,
+                        url: domain + "api/orderOutgoing/updateToFinish/" + data[0].id,
                         success: function (result) {
                             if (result.code == 0) {
                                 table.reload('orderTable');
@@ -267,7 +219,7 @@
                         curr: 1 //重新从第 1 页开始
                     }
                     , where: {
-                        purchaseCode: $('#purchaseCode').val(),
+                        sampleCode: $('#sampleCode').val(),
                         orderCode: $('#orderCode').val(),
                         productName: $('#productName').val()
                     }
