--- a/views/business/purchase-order-add.html
+++ b/views/business/purchase-order-add.html
@@ -9,6 +9,7 @@
     <title>网站后台管理模版</title>
     <link rel="stylesheet" href="../../layuiadmin/layui/css/layui.css" media="all">
     <link rel="stylesheet" href="../../layuiadmin/style/admin.css" media="all">
+    <link rel="stylesheet" href="../../layuiadmin/style/jquery.searchableSelect.css" media="all">
 </head>
 <body>
 
@@ -18,100 +19,74 @@
             <form class="layui-form" action="" lay-filter="component-form-group">
                 <div class="layui-form-item">
                     <div class="layui-inline">
-                        <label class="layui-form-label">物品名称</label>
-                        <div class="layui-input-inline">
-                            <input type="text" name="goodsName" lay-verify="required" autocomplete="off" placeholder="请输入物品名称" class="layui-input">
-                            <input type="hidden" name="goodsType" lay-verify="required" autocomplete="off" value="1" class="layui-input">
-                        </div>
-                    </div>
-                    <div class="layui-inline">
-                        <label class="layui-form-label">物品型号</label>
-                        <div class="layui-input-inline">
-                            <input type="text" name="goodsModel" lay-verify="required" autocomplete="off" placeholder="请输入物品型号" class="layui-input">
-                        </div>
-                    </div>
-                    <div class="layui-inline">
-                        <label class="layui-form-label">物品类型</label>
-                        <div class="layui-input-inline">
-                            <select name="type" lay-filter="">
-                                <option value="1">原材料</option>
-                                <option value="2">成品</option>
+                        <label class="layui-form-label">订单号</label>
+                        <div class="layui-input-inline" style="width: 450px;">
+                            <select name="orderId" id="orderId" lay-ignore>
+                                <option value="">请选择</option>
                             </select>
+                            <input type="hidden" name="orderId" class="layui-input" readonly>
+                        </div>
+                        <label class="">默认只显示50条，可输入订单号搜索</label>
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                    <div class="layui-inline">
+                        <label class="layui-form-label">采购单编号</label>
+                        <div class="layui-input-inline">
+                            <input type="text" name="purchaseCode" lay-verify="required" autocomplete="off" placeholder="请输入采购单编号" class="layui-input" readonly>
+                        </div>
+                    </div>
+                    <div class="layui-inline">
+                        <label class="layui-form-label">订单编号</label>
+                        <div class="layui-input-inline">
+                            <input type="text" name="orderCode" lay-verify="required" autocomplete="off" placeholder="请输入订单编号" class="layui-input" readonly>
+                            <input type="hidden" name="orderId" lay-verify="required" autocomplete="off" placeholder="" class="layui-input" readonly>
+                        </div>
+                    </div>
+                    <div class="layui-inline">
+                        <label class="layui-form-label">原材料名称</label>
+                        <div class="layui-input-inline">
+                            <input type="text" name="productName" lay-verify="required" autocomplete="off" placeholder="请输入原材料名称" class="layui-input">
                         </div>
                     </div>
                 </div>
                 <div class="layui-form-item">
                     <div class="layui-inline">
-                        <label class="layui-form-label">物品数量</label>
+                        <label class="layui-form-label">成份</label>
                         <div class="layui-input-inline">
-                            <input type="text" name="num" lay-verify="required|number" autocomplete="off" placeholder="请输入物品数量" class="layui-input">
-                        </div>
-                    </div>
-                    <div class="layui-inline">
-                        <label class="layui-form-label">单位</label>
-                        <div class="layui-input-inline">
-                            <input type="text" name="unit" lay-verify="required" autocomplete="off" placeholder="请输入物品单位" class="layui-input">
+                            <input type="text" name="ingredients" lay-verify="required" autocomplete="off" placeholder="请输入成份" class="layui-input">
                         </div>
                     </div>
                     <div class="layui-inline">
                         <label class="layui-form-label">颜色</label>
                         <div class="layui-input-inline">
-                            <input type="text" name="color" lay-verify="required" autocomplete="off" placeholder="请输入物品颜色" class="layui-input">
+                            <select name="color" lay-search></select>
                         </div>
                     </div>
-                </div>
-                <div class="layui-form-item">
                     <div class="layui-inline">
                         <label class="layui-form-label">批次</label>
                         <div class="layui-input-inline">
-                            <input type="text" name="batchNo" lay-verify="required" placeholder="请输入产品批次" autocomplete="off" class="layui-input">
-                        </div>
-                    </div>
-                    <div class="layui-inline">
-                        <label class="layui-form-label">产品单价</label>
-                        <div class="layui-input-inline">
-                            <input type="text" name="unitPrice" lay-verify="required|number" placeholder="请输入产品单价" autocomplete="off" class="layui-input">
-                        </div>
-                    </div>
-                    <div class="layui-inline">
-                        <label class="layui-form-label">产品总价</label>
-                        <div class="layui-input-inline">
-                            <input type="text" name="totalPrice" lay-verify="required|number" placeholder="请输入产品总价" autocomplete="off" class="layui-input">
+                            <input type="text" name="batchNo" lay-verify="required" autocomplete="off" placeholder="请输入批次" class="layui-input">
                         </div>
                     </div>
                 </div>
                 <div class="layui-form-item">
                     <div class="layui-inline">
-                        <label class="layui-form-label">生产日期</label>
+                        <label class="layui-form-label">重量</label>
                         <div class="layui-input-inline">
-                            <input type="text" name="produceDate" id="produceDate" lay-verify="date" placeholder="yyyy-MM-dd" autocomplete="off" class="layui-input">
+                            <input type="text" name="weight" lay-verify="required" placeholder="请输入重量" autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <div class="layui-inline">
-                        <label class="layui-form-label">过期日期</label>
+                        <label class="layui-form-label">件(箱)数</label>
                         <div class="layui-input-inline">
-                            <input type="text" name="expiredDate" id="expiredDate" lay-verify="date" placeholder="yyyy-MM-dd" autocomplete="off" class="layui-input">
-                        </div>
-                    </div>
-                </div>
-
-                <div class="layui-form-item">
-                    <div class="layui-inline">
-                        <label class="layui-form-label">供应商</label>
-                        <div class="layui-input-inline">
-                            <input type="text" name="supplier" id="supplier"  placeholder="请输入供应商" autocomplete="off" class="layui-input">
+                            <input type="text" name="num" lay-verify="required|number" placeholder="请输入数量" autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <div class="layui-inline">
-                        <label class="layui-form-label">购买人</label>
+                        <label class="layui-form-label">货源公司</label>
                         <div class="layui-input-inline">
-                            <input type="text" name="buyer" id="buyer" lay-verify="" placeholder="请输入购买人" autocomplete="off" class="layui-input">
-                        </div>
-                    </div>
-                    <div class="layui-inline">
-                        <label class="layui-form-label">购买日期</label>
-                        <div class="layui-input-inline">
-                            <input type="text" name="buyDate" id="buyDate" lay-verify="date" placeholder="yyyy-MM-dd" autocomplete="off" class="layui-input">
+                            <input type="text" name="company" lay-verify="required|number" placeholder="请输入货源公司" autocomplete="off" class="layui-input">
                         </div>
                     </div>
                 </div>
@@ -137,34 +112,93 @@
 
 <script src="../../layuiadmin/layui/layui.js"></script>
 <script src="../../layuiadmin/commons.js"></script>
+<script src="../../layuiadmin/jquery-2.1.4.min.js"></script>
+<script src="../../layuiadmin/jquery.searchableSelect.js"></script>
 <script>
+    function callback(value){
+        $.ajax({
+            type: 'GET',
+            contentType: "application/json;",
+            url: domain + "api/order/getOrder/" + value,
+            success: function (result) {
+                if (result.code == 0) {
+                    var order = result.data;
+                    $("input[name='orderCode']").val(order.orderCode);
+                    $("input[name='orderId']").val(order.id);
+                } else {
+                    layer.alert(result.msg);
+                }
+            },
+            error: function () {
+                console.log("网络错误！");
+            }
+        });
+    }
+
     layui.config({
         base: '../../layuiadmin/' //静态资源所在路径
     }).extend({
         index: 'lib/index' //主入口模块
-    }).use(['index', 'form', 'laydate', 'layedit'], function () {
+    }).use(['index', 'form'], function () {
         var $ = layui.$
             , layer = layui.layer
-            , laydate = layui.laydate
             , form = layui.form;
 
-        form.render(null, 'component-form-group');
-        laydate.render({
-            elem: '#expiredDate'
-        });
-        laydate.render({
-            elem: '#produceDate'
-        });
-        laydate.render({
-            elem: '#buyDate'
+        function timeStamp2String(time){
+            var datetime = new Date();
+            datetime.setTime(time);
+            var year = datetime.getFullYear();
+            var month = datetime.getMonth() + 1 < 10 ? "0" + (datetime.getMonth() + 1) : datetime.getMonth() + 1;
+            var date = datetime.getDate() < 10 ? "0" + datetime.getDate() : datetime.getDate();
+            var hour = datetime.getHours()< 10 ? "0" + datetime.getHours() : datetime.getHours();
+            var minute = datetime.getMinutes()< 10 ? "0" + datetime.getMinutes() : datetime.getMinutes();
+            var second = datetime.getSeconds()< 10 ? "0" + datetime.getSeconds() : datetime.getSeconds();
+            var millsecond = datetime.getMilliseconds();
+            return year + month + date + hour + minute + second + millsecond;
+        }
+        $("input[name='purchaseCode']").val("pc_" + timeStamp2String(new Date()));
+
+        $.ajax({
+            type: 'GET',
+            contentType: "application/json;",
+            url: domain + "api/color/findColor?t=" + new Date().getTime(),
+            success: function (result) {
+                if (result.code == 0) {
+                    $("select[name='color']").append("<option value=\"\">请选择</option>");
+                    $.each(result.data, function (index, value) {
+                        $("select[name='color']").append("<option value=\"" + value.colorName + "\">" + value.colorName + "</option>");
+                    })
+                    form.render('select');
+                } else {
+                    layer.alert(result.msg);
+                }
+            },
+            error: function () {
+                console.log("网络错误！");
+            }
         });
 
+        $.ajax({
+            type: "GET",
+            contentType: "application/json; charset=utf-8",
+            url: domain + "api/order/findOrderPage?limit=50&t=" + new Date().getTime(),
+            success: function(data) {
+                var tbody = "";
+                $.each(data.data, function(n, value) {
+                    var trs = "";
+                    trs += "<option value=" + value.id + ">" + value.orderCode + "</option>";
+                    tbody += trs;
+                });
+                $("#orderId").append(tbody);
+                //添加带搜索框的下拉框
+                $("#orderId").searchableSelect("api/order/searchOrder?code=");
+            },
+        });
+
+        form.render(null, 'component-form-group');
 
         /* 监听提交 */
         form.on('submit(component-form-demo1)', function (data) {
-            data.field.produceDate = data.field.produceDate + " 00:00:00";
-            data.field.expiredDate = data.field.expiredDate + " 00:00:00";
-            data.field.buyDate = data.field.buyDate + " 00:00:00";
             $.ajax({
                 type: 'POST',
                 contentType: "application/json;",
